# graphion-scraper

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  requirements.txt.old  seccomp_profile.json  setup.cfg
database/: Dockerfile  scripts.sql
database/initialization/: 1-create-unpriviliged-user.sh  1-ddl.sql  2-ddl.sql  2-dml.sql
dummy/: target.html
redis/: Dockerfile  redis.conf
saxomoose.scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scraper/: __main__.py  db_init.py  db_service.py  main.py  models.py  redis_init.py  redis_service.py  scraper_service.py  serialization_service.py  service.py  utils.py
src/: playground.py
